[package]
author = "kulupu lintukamaki"
name = "kijetesantakaluotokieni"
version = "1.0.0"
edition = "2021"
about = "kijetesantakalu toki tawa ilo sona sina"
default-run = "kijetesantakaluotokieni"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
voca_rs = " 1.14.0"
clap = { version = "3.1.12", features = ["derive"] }